--- a/src/MyStore/MyStore.Api/MyStore.Api.csproj
+++ b/src/MyStore/MyStore.Api/MyStore.Api.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyStore.Console\MyStore.Core.csproj" />
+  </ItemGroup>
+
 </Project>
